# shared_ref

./: CMakeLists.txt  LICENSE.md  README.md
include/: shared_ref.hpp
test/: main.cpp
